--- a/Gapa.resx
+++ b/Gapa.resx
@@ -117,7 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="axWindowsMediaPlayer1.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="VideoWin.OcxState" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACFTeXN0
@@ -125,8 +125,8 @@
         AAAAAQAAAAAAAAAAAAAAAOIAAAABAwAACABAAAAAQwA6AFwAVQBzAGUAcgBzAFwAbQBqAHcAbwBqAFwA
         RABlAHMAawB0AG8AcABcAEYAaQBsAG0ALgBtAHAANAAAAAUAAAAAAAAA8D8DAAAAAAAFAAAAAAAAAAAA
         CAACAAAAAAADAAEAAAALAP//AwAAAAAACwD//wgAAgAAAAAAAwAyAAAACwAAAAgACgAAAGYAdQBsAGwA
-        AAALAAAACwAAAAsA//8LAP//CwAAAAgAAgAAAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACwAAAKQQ
-        AADICwAACw==
+        AAALAAAACwAAAAsA//8LAP//CwAAAAgAAgAAAAAACAACAAAAAAAIAAIAAAAAAAgAAgAAAAAACwAAAA4O
+        AACTCwAACw==
 </value>
   </data>
 </root>
