--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -121,4 +121,10 @@
   <data name="Blackjack_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Blackjack_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Roulette_table" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Roulette_table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Roulette_table1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Roulette_Table\Roulette_table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
