--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,4 +124,7 @@
   <data name="login_backgroud2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_backgroud2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Blackjack_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Blackjack_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
