--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -118,19 +118,22 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="bj_backgroud1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\bj_backgroud1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Blackjack_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Blackjack_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="login_backgroud2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_backgroud2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="Blackjack_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Blackjack_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Roulette_table" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roulette_table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Roulette_table1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roulette_Table\Roulette_table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bj_backgroud1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\bj_backgroud1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="spades_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\spades-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
