--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -139,4 +139,7 @@
   <data name="dontgiveup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dontgiveup.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dashboard_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dashboard_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
