--- a/Roulette.resx
+++ b/Roulette.resx
@@ -4042,6 +4042,76 @@
         3Easud075z//2Q==
 </value>
   </data>
+  <data name="bet_0.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        /9j/4AAQSkZJRgABAQEBLAEsAAD/4QBeRXhpZgAATU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAZKG
+        AAcAAAAqAAAALAAAAABVTklDT0RFAABDAHIAZQBhAHQAZQBkACAAdwBpAHQAaAAgAEcASQBNAFD/4gKw
+        SUNDX1BST0ZJTEUAAQEAAAKgbGNtcwRAAABtbnRyUkdCIFhZWiAH6AAFAAgAEwAeACthY3NwTVNGVAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA9tYAAQAAAADTLWxjbXMAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA1kZXNjAAABIAAAAEBjcHJ0AAABYAAAADZ3dHB0AAABmAAA
+        ABRjaGFkAAABrAAAACxyWFlaAAAB2AAAABRiWFlaAAAB7AAAABRnWFlaAAACAAAAABRyVFJDAAACFAAA
+        ACBnVFJDAAACFAAAACBiVFJDAAACFAAAACBjaHJtAAACNAAAACRkbW5kAAACWAAAACRkbWRkAAACfAAA
+        ACRtbHVjAAAAAAAAAAEAAAAMZW5VUwAAACQAAAAcAEcASQBNAFAAIABiAHUAaQBsAHQALQBpAG4AIABz
+        AFIARwBCbWx1YwAAAAAAAAABAAAADGVuVVMAAAAaAAAAHABQAHUAYgBsAGkAYwAgAEQAbwBtAGEAaQBu
+        AABYWVogAAAAAAAA9tYAAQAAAADTLXNmMzIAAAAAAAEMQgAABd7///MlAAAHkwAA/ZD///uh///9ogAA
+        A9wAAMBuWFlaIAAAAAAAAG+gAAA49QAAA5BYWVogAAAAAAAAJJ8AAA+EAAC2xFhZWiAAAAAAAABilwAA
+        t4cAABjZcGFyYQAAAAAAAwAAAAJmZgAA8qcAAA1ZAAAT0AAACltjaHJtAAAAAAADAAAAAKPXAABUfAAA
+        TM0AAJmaAAAmZwAAD1xtbHVjAAAAAAAAAAEAAAAMZW5VUwAAAAgAAAAcAEcASQBNAFBtbHVjAAAAAAAA
+        AAEAAAAMZW5VUwAAAAgAAAAcAHMAUgBHAEL/2wBDAAMCAgMCAgMDAwMEAwMEBQgFBQQEBQoHBwYIDAoM
+        DAsKCwsNDhIQDQ4RDgsLEBYQERMUFRUVDA8XGBYUGBIUFRT/2wBDAQMEBAUEBQkFBQkUDQsNFBQUFBQU
+        FBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBQUFBT/wgARCAA8AEADAREAAhEB
+        AxEB/8QAGwAAAgMBAQEAAAAAAAAAAAAABgcAAwUEAQL/xAAaAQACAwEBAAAAAAAAAAAAAAADBAABAgUG
+        /9oADAMBAAIQAxAAAAFeed8e1HeitlEeShyrlyVC07OXkZaVmiVrkL8VUqK1TnFZmTA7QgBa65kDHVKr
+        rJ2y8OiXKCseSZWB6m96GyAayZaZkZEuUmZprAYBZmtP+SKJLmstt8VCtukMKBWYzT6pT5vLWWg30Q1d
+        Tp1sUCq3neopkuYwWneiaAV0s7GC07IkFY/YcwsCHRAlSSSQtMz/AP/EACYQAAICAgIABQUBAAAAAAAA
+        AAQFAwYBAgA2BxESFiATFBUjJCb/2gAIAQEAAQUC5VBY1gZZUhxPwqfY06yRwxuDOOSdLVvvBsvUKzOL
+        SpK4VVxGguceWan2Rdt7ZqlXUYdNrO+2cGjI2Buhag0DC5jOqMt4kJUNT7Jdv1i1TP0ENJXQsHh1/Z7z
+        pLscUwsoMa14B/R4f1Pslix+Tq9Gk0nkBMJrzTZ7WWmfcqBPwsuQ4kzXKejVPslOYx+swYmutywh7tAY
+        AQBJFHvPuqq+i6N+6keMKn2TGfLjD/V12KbeCQW+s4I5PEA/0nMSWU3Kn2TlHLkHsNhEjBd/Cp9j/8QA
+        KBEAAgIBAwIFBQEAAAAAAAAAAQIAAwQREiExMxATIjJBFCAjJFFC/9oACAEDAQE/AZjKK1N7xiWOp6/b
+        jd1ZVWbXCCZVgb8a9BKsfcN9h0WG6ivhE1n1FR91cOOlg3UHwxu6sX9egv8AJmPX5tmnxMi3zW0Ht+It
+        NjdFjVOnuWJYa23CZShgLl6GY3dWZfSsTG9NVjTEQPZzHzbNfTKst2YK/OsvQJaQInOK2sxu8sv9dKP/
+        ACYZ3bqz8xXNNmo+J52LZy6z6iivmpeYzFjuMb8eNtPUzG7omK418puhjq1FkZVyxuT3RldeCINT0leP
+        s9dvAl1vnPumN3l8H/aq3jqICRyIMy0cHmfWv/kCM7Pyx8Mbur4YjlbdP7L1CWkD7cfurP/EACcRAAIC
+        AAQGAwADAAAAAAAAAAECAAMREhMhBBAxMjNBICJRFCNx/9oACAECAQE/AZSuUajQnMcx+NPkErQ2NgJe
+        47R0ldOO79JqVrsq4zWU9yQ1K4xqPKnyCL/VXm9mUpnaXWZzh6grY9BGrdeoiuVOIly4jUEp8gnEdqiU
+        7I5nDoGeHiX9Su9mYKZauVyIu9BlPkEt+1YaUb5l/YpNbf5NSlt2WatSdgjHMcYw06cv7KfIJQw7G9xg
+        1TwqOIGZesKsuzTAnpEqy/eyWPqHGU+QcmGsmb2ID7EHEvP5DfkZi/dyp8g5UHB8JauV9vjV3if/xAA5
+        EAABAgMEBQgJBQEAAAAAAAACAQMABBEFEiFREyJBc8EQMTJSYZGh8BQgIzNCQ3GBsRU0YmPR8f/aAAgB
+        AQAGPwKH7dm01GqiwK/EXnDvh2YeK844V4vVs/ecFhmVb+NdZeqO1Yas2UwkpJLqIm0vPGPTp970Kz0+
+        NecvpFySshJqnzZjb3xdm7BZQeszSqfiDm7CfV6705U+mkY4fWLP3nCDn0/fTy3G16o+ce6Aac9wHtHf
+        pCiGrJM6rLac1M4vsSTzgdZAwi9MSrzI9Yhw74CZlyuuD49ixK21Kjdam8HEyPzXuiz95wixWEwAJaqe
+        EW/MD7wWrqL9lgReFDBoFcuLtVOaDSXuSzaLRBuVX71hmVnAbmWXy0a6lFx/MTUuz7oSqKZVStItAS+S
+        +hD2dGLP3nBYsifDHRDoHOzZw8Yn7ONaJOMqg1zT/vhCOCl19hVAhLbmkaWds8mny6SoP+Qp2XZ16Zpg
+        ZJSn3XGHZh4rzji3iWGJY8H513SKOQ+ad8WfvOCw7ZM3jJzmrjsLzwhQvXX2CqJ55LHpckoM2oKe2lyX
+        p+c4UJlg2S/mkILYk4WQpWP1G21SXYbxGXLpGuVOEE+aXQTVbDqjFn7zhyBPDjaEkl15E5yHPj3wJtmr
+        Zj0SFaUi47oZsf7gx8IowxKy3aARpZl83jzJebks/ecF5GGwXUfqBjmlKxOMMpdbFzBMtvqyG84LH//E
+        ACYQAQABAwMEAgMBAQAAAAAAAAERACExUWFxQYGRobHwIMHR8RD/2gAIAQEAAT8hqX6NnS2U+vCpwAJu
+        9OP5TbNuaL4/BCWMZNE/R7io8JiLHZe2OaMgb3H33Te+xXQiUnlAX0VCuOg9HyoSRenwzfs51pGAoYQQ
+        lfY3UIGNVr1/TRKYgpPT0ndgnmmTmNgi0/bQUSRsXDhav/uJf8KmUXHQ9dQagfiH797B33V9ndWn628H
+        9UmLkmSf6eqjZGSRgB1zPagAb2bBjk7UWzJkbCbWGpFDoAA9AeCYpODNXUr9vn/gjhspOuAT39VCvZGi
+        beJUChhRdCc68NKblEWXlk+KCKTCL9w+FTFBxP8AAxRgutSw/BUqAu22Bo7efmgKQZzD4U6clJhrLBDC
+        Px2OKDBnCg8OHs0uVYUvVA3FZHPF/o7GYGkve1zrX0N1IhFEuJmdqAbOWVelnbV4NUs4UEgFp+RClpg9
+        YvtrQidgNAwdvwEgAE1iQPZ7am0saZLPf5df/9oADAMBAAIAAwAAABDFVTCuiiUc6WRPMyN2xosvar6h
+        NXGBDbT/xAAlEQEAAQQBAwQDAQAAAAAAAAABABEhMVFxQZHBEGGBodHh8CD/2gAIAQMBAT8QmFExzF+d
+        1gi0H+7y+AlEz6XE78TqAfXMWH26WfnAMsg9zSGPBsj+u2RzTU+9L81nEujC7xKpgWEDFU+JdkIUfGeN
+        QZ9kfe/MQdLSssHNPFYfDUCsSiwHUK4FmLzEtWVFwr4Ikpblo+x7QF0G334nW0m24IsHh8Sj+QR8x3dW
+        7DT2P92l2+KX72IBaJiVy0OTfEVqhILFS6owyPQvTqx0wOhqLuQWjTMAJ7/iIVqMMKPIiOBwfuO3Xp9r
+        0AnFjMA1Z1f8ZnvP/8QAJBEBAAICAQMEAwEAAAAAAAAAAQARITFBEFFxYYHh8CCRodH/2gAIAQIBAT8Q
+        hPxa8x2TcauX1ziA97xGJrY94puqF+g5mlR6xBcrZzErpM+ChHRlgLwYqH2tffWAW/39wG2T7TCLl356
+        HwFDEg7qELNEY4gQY7GEHqbPh/yGZo+MRl3hB6b/AKnfiVbyxUe2ZlvKc2C7GnmUi8jj1l0K5kYobhi5
+        w+IHHMfsjUcRrPaAY+CIOpgSmnzHiB7fMWtX0x6DkNMJDlHf4Yeef//EACYQAQACAgIBAwQDAQAAAAAA
+        AAERIQAxQVFhcYGRELHR4aHw8cH/2gAIAQEAAT8Q/seePn74XG/INdcyweJeEpLPpthyCgOhk3FnhD8Y
+        ryFNxf2y+o+h/FqcqUAEksP6adoG8jCdOiZfDGS3KTvEK7CEcsxoJoRJpN5JO1EPOgv8DEqC1DuwmnwB
+        zQkbUooVSqu1CSFZpEiBhEbE1CDWjWKQzlie4VYH0OkrifI7tFwX2dNolxhCzEQUrEwpYRAqLm/6Th7a
+        H1HCumCy+gQ+Jv2yNRY8+0iOEj3JCThWozygZYcvMSbwpb+teKLwAtCa/H8spYq1FcnvLBF2xhnHAanc
+        JnEb64uEFpSwARWDqfJK6AgtWxNkZb4QQvT1IOgDjLk+SRS+/wAzvIsFGmUhjuhFDoP+xmkYkEC+TNpy
+        wEYbLxeXEFOEYUbq/cyuS7Q94IpSPMbTg8gJ1iWoUYS8BwAAUAe06RxIIypxA7/SRSy5kv4kkQ8ELqoT
+        we2UjOtlYDtBOjKaw0uzSICnp0PCyxUnBspuGLymKTuFs8QSb9sJTRgBAp5SisFwOE3R7aA1LlWrUrFB
+        l57az7eISYRgBIVuZ/PBhp+HUSRDcy/UY2+RkvhYyenzhTgwRLysF9RcOyMJ/wChB8iYihBLobHA+AZw
+        HWGzq0by4TU8m/GBNF5JpA7KHiDS46RemQCDwKDxGQS1wfYf+51zHf1E9o0cP//Z
+</value>
+  </data>
   <data name="$this.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         /9j/4AAQSkZJRgABAQEBLAEsAAD/4QBaRXhpZgAATU0AKgAAAAgAAYdpAAQAAAABAAAAGgAAAAAAAZKG
