Another visual changes (Wojna,Gapa, Paypal)

--- a/Properties/Resources.resx
+++ b/Properties/Resources.resx
@@ -124,11 +124,17 @@
   <data name="login_backgroud2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\login_backgroud2.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="dashboard_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\dashboard_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Roulette_table1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Roulette_Table\Roulette_table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="spades_icon" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\spades-icon.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Paypal_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\paypal_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bj_backgroud1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\bj_backgroud1.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -139,7 +145,7 @@
   <data name="dontgiveup" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\dontgiveup.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="dashboard_background" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\dashboard_background.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Table" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Table.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
